Fixing the input on mobile

--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -58,6 +58,7 @@ i.fa-male {
 .form-control {
 	width: 45%;
 	text-align: center;
+	height: 4vh;
 }
 
 .floorCheck {
