--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -53,7 +53,6 @@
     [class*="control"] {
       height: 100%;
       width: 61.5vw;
-
     }
     [class*="social"] {
         left: 55%;
@@ -68,7 +67,7 @@
       margin-left: 10px;
     }
     [class*='add'] {
-      direction: rtl;
+      direction: ltr;
       min-width: 80% !important;
       display: contents !important;
     }
@@ -88,10 +87,8 @@
       margin: 50px auto 0px auto !important;
     }     
     [class*="floorCheck"] {
-      top: 26% !important;
-      position: fixed !important;
-      max-width: 140px;
-      left: 27.5%;
+      top: 77% !important;
+      margin: 0% 0% 0% 30% !important;
     }     
     [class*='container-fluid'] {
       width: 100%;
@@ -99,6 +96,14 @@
     }
     [class*='navbar'] {
       display: block;
+    }
+    [class*='form-control'] {
+      padding: 10px 0px;
+      width: 70% !important;
+      height: 6vh !important;
+    }
+    [class*='position'] {
+      min-height: 44vh;
     }
 }
 
